mega-menu-update

--- a/sections/cstm-header.liquid
+++ b/sections/cstm-header.liquid
@@ -618,554 +618,43 @@ customElements.define('sticky-header', StickyHeader);
   ],
   "blocks": [
     {
-      "type": "customize-top-menu-item",
-      "name": "Customize top menu item",
-      "settings": [
+      "type":"collection_list",
+      "name":"Collection_list",
+      "settings":[
         {
-          "type": "text",
-          "id": "mega_menu_trigger",
-          "label": "Mega menu Trigger",
-          "placeholder": "Enter the name of the menu item you'd like to highlight"
+          "type":"text",
+          "id":"collection_menu_trigger",
+          "label":"Menu trigger"
         },
         {
-          "type": "header",
-          "content": "Colors"
+          "type":"collection_list",
+          "id":"collection_list",
+          "label":"Collection"
         },
         {
-          "type": "checkbox",
-          "id": "enable_color_scheme",
-          "label": "Enable",
-          "default": false
-        },
-        {
-          "type": "color",
-          "id": "menu_item_color_scheme",
-          "label": "Text color"
-        },
-        {
-          "type": "color",
-          "id": "menu_item_background-color",
-          "label": "Background color"
-        },
-        {
-          "type": "select",
-          "id": "menu_style_on_desktop",
-          "label": "Style on desktop",
-          "options": [
-            {
-              "value": "solid",
-              "label": "Solid"
-            },
-            {
-              "value": "outline",
-              "label": "Outline"
-            }
-          ],
-          "default": "solid"
-        },
-        {
-          "type": "select",
-          "id": "menu_apply_on",
-          "label": "Apply on",
-          "options": [
-            {
-              "value": "Mobile",
-              "label": "Mobile"
-            },
-            {
-              "value": "desktop",
-              "label": "Desktop"
-            },
-            {
-              "value": "all",
-              "label": "All"
-            }
-          ],
-          "default": "all"
-        },
-        {
-          "type": "header",
-          "content": "Link settings"
-        },
-        {
-          "type": "checkbox",
-          "id": "open_link_new_tab",
-          "label": "Open link in new tab",
-          "default": true
+          "type":"text",
+          "id":"collection_title",
+          "label":"Collection title"
         }
       ]
     },
     {
-      "type": "menu-badge",
-      "name": "Menu badge",
-      "settings": [
+      "type":"collection_item",
+      "name":"Collection item",
+      "settings":[
         {
-          "type": "text",
-          "id": "menu-badge-trigger",
-          "label": "Menu badge trigger",
-          "placeholder": "Enter the name of the menu item you'd like to highlight"
+          "type":"text",
+          "id":"collection_item_menu_trigger",
+          "label":"Menu trigger"
         },
         {
-          "type": "text",
-          "id": "menu-badge-text",
-          "label": "Text"
-        },
-        {
-          "type": "color",
-          "id": "menu-badge-color",
-          "label": "Text color"
-        },
-        {
-          "type": "color",
-          "id": "menu-badge-background-color",
-          "label": "Background color"
+          "type":"collection",
+          "id":"collection_item",
+          "label":"Collection Item"
         }
       ]
     },
-    {
-      "type": "menu-label",
-      "name": "Menu Label",
-      "settings": [
-        {
-          "type": "text",
-          "id": "menu-label-text",
-          "label": "Text label"
-        },
-        {
-          "type": "select",
-          "id": "menu-icon-label",
-          "label": "Icon",
-          "options": [
-            {
-              "value": "arrow",
-              "label": "Arrow"
-            },
-            {
-              "value": "circle",
-              "label": "Circle"
-            },
-            {
-              "value": "square",
-              "label": "Square"
-            },
-            {
-              "value": "triangle",
-              "label": "Triangle"
-            }
-          ]
-        },
-        {
-          "type": "url",
-          "id": "menu-label-link",
-          "label": "Link"
-        }
-      ]
-    },
-    {
-      "type": "supported-region",
-      "name": "Supported Region",
-      "settings": [
-        {
-          "type": "text",
-          "id": "supported_region_text",
-          "label": "Region name"
-        },
-        {
-          "type": "text",
-          "id": "supported_region_hotline",
-          "label": "Hotline"
-        },
-        {
-          "type": "text",
-          "id": "supported_region_address",
-          "label": "Address"
-        },
-        {
-          "type": "text",
-          "id": "supported_region_email",
-          "label": "Email"
-        }
-      ]
-    },
-    {
-      "type": "supported-information",
-      "name": "Supported Information",
-      "settings": [
-        {
-          "type": "select",
-          "id": "supported_information_icon",
-          "label": "Icon",
-          "options": [
-            {
-              "value": "arrow",
-              "label": "Arrow"
-            },
-            {
-              "value": "circle",
-              "label": "Circle"
-            },
-            {
-              "value": "square",
-              "label": "Square"
-            },
-            {
-              "value": "triangle",
-              "label": "Triangle"
-            },
-            {
-              "value": "Parallelogram",
-              "label": "Parallelogram"
-            }
-          ],
-          "default": "circle"
-        },
-        {
-          "type": "text",
-          "id": "supported_information_title",
-          "label": "Title"
-        },
-        {
-          "type": "url",
-          "id": "supported_information_url",
-          "label": "Link"
-        }
-      ]
-    },
-    {
-      "type": "mega-menu-promotion",
-      "name": "Mega Menu Promotion",
-      "settings": [
-        {
-          "type": "text",
-          "id": "menu_promotion_trigger",
-          "label": "Mega menu trigger"
-        },
-        {
-          "type": "text",
-          "id": "mega_menu_promotion_item",
-          "label": "Menu item"
-        },
-        {
-          "type": "image_picker",
-          "id": "mega_menu_promotion_image",
-          "label": "Image"
-        },
-        {
-          "type": "select",
-          "id": "menu_promotion_image_ratio",
-          "label": "Image ratio",
-          "options": [
-            {
-              "value": "adapt to image",
-              "label": "Adapt to image"
-            },
-            {
-              "value": "square",
-              "label": "Square"
-            },
-            {
-              "value": "portrait",
-              "label": "Portrait"
-            },
-            {
-              "value": "landscape",
-              "label": "Landscape"
-            }
-          ],
-          "default": "adapt to image"
-        },
-        {
-          "type": "text",
-          "id": "menu_promotion_caption",
-          "label": "Caption"
-        },
-        {
-          "type": "text",
-          "id": "menu_promotion_heading",
-          "label": "Heading",
-          "default": "Heading"
-        },
-        {
-          "type": "text",
-          "id": "menu_promotion_subheading",
-          "label": "Subheading",
-          "default": "Subheading"
-        },
-        {
-          "type": "text",
-          "id": "menu_promotion_button_label",
-          "label": "Button label",
-          "default": "Button"
-        },
-        {
-          "type": "select",
-          "id": "menu_promotion_button_style",
-          "label": "Button style",
-          "options": [
-            {
-              "value": "solid button",
-              "label": "Solid button"
-            },
-            {
-              "value": "outline button",
-              "label": "Outline button"
-            },
-            {
-              "value": "link",
-              "label": "Link"
-            }
-          ],
-          "default": "solid button"
-        },
-        {
-          "type": "select",
-          "id": "menu_promotion_text_alignment",
-          "label": "Text alignment",
-          "options": [
-            {
-              "value": "left",
-              "label": "Left"
-            },
-            {
-              "value": "right",
-              "label": "Right"
-            },
-            {
-              "value": "center",
-              "label": "Center"
-            }
-          ],
-          "default": "left"
-        },
-        {
-          "type": "select",
-          "id": "menu_promotion_text_position",
-          "label": "Text position",
-          "options": [
-            {
-              "value": "top",
-              "label": "Top"
-            },
-            {
-              "value": "middle",
-              "label": "Middle"
-            },
-            {
-              "value": "bottom",
-              "label": "Bottom"
-            }
-          ],
-          "default": "middle"
-        },
-        {
-          "type": "url",
-          "id": "menu_promotion_url",
-          "label": "Link"
-        },
-        {
-          "type": "select",
-          "id": "menu_promotion_position",
-          "label": "Position",
-          "options": [
-            {
-              "value": "first column",
-              "label": "First column"
-            },
-            {
-              "value": "last column",
-              "label": "Last column"
-            }
-          ],
-          "default": "first column"
-        },
-        {
-          "type": "header",
-          "content": "Overlay text on image"
-        },
-        {
-          "type": "checkbox",
-          "id": "menu_promotion_enable",
-          "label": "Enable",
-          "default": true
-        },
-        {
-          "type": "range",
-          "id": "menu_promotion_range",
-          "label": "Overlay opacity",
-          "min": 0,
-          "max": 100,
-          "step": 1,
-          "unit": "%",
-          "default": 50
-        },
-        {
-          "type": "color_scheme",
-          "id": "menu_promotion_overlay_color",
-          "label": "Color scheme",
-          "default": "accent-1"
-        }
-      ]
-    },
-    {
-      "type": "mega-menu-product-brand",
-      "name": "Mega menu product brand",
-      "settings": [
-        {
-          "type": "text",
-          "id": "mega_menu_product_brand_trigger",
-          "label": "Mega menu trigger"
-        },
-        {
-          "type": "text",
-          "id": "menu_product_brand_item",
-          "label": "Mega item name"
-        },
-        {
-          "type": "select",
-          "id": "menu_promotion_brand_position",
-          "label": "Position",
-          "options": [
-            {
-              "value": "first column",
-              "label": "First column"
-            },
-            {
-              "value": "last column",
-              "label": "Last column"
-            }
-          ],
-          "default": "first column"
-        },
-        {
-          "type": "text",
-          "id": "menu_product_brand_label",
-          "label": "Label",
-          "default": "Shop by brand"
-        },
-        {
-          "type": "url",
-          "id": "menu_product_brand_url",
-          "label": "Link"
-        },
-        {
-          "type": "select",
-          "id": "menu_product_brand_image_ratio",
-          "label": "Image ratio",
-          "options": [
-            {
-              "value": "square",
-              "label": "Square"
-            },
-            {
-              "value": "circle",
-              "label": "Circle"
-            }
-          ]
-        }
-      ]
-    },
-    {
-      "type": "mega-menu-product-type",
-      "name": "Mega menu product type",
-      "settings": [
-        {
-          "type": "text",
-          "id": "menu_product_type_trigger",
-          "label": "Mega menu trigger"
-        },
-        {
-          "type": "text",
-          "id": "menu_product_type_item_name",
-          "label": "Menu item name"
-        },
-        {
-          "type": "select",
-          "id": "menu_product_type_position",
-          "label": "Position",
-          "options": [
-            {
-              "value": "first column",
-              "label": "First column"
-            },
-            {
-              "value": "last column",
-              "label": "Last column"
-            }
-          ],
-          "default": "first column"
-        },
-        {
-          "type": "text",
-          "id": "menu_product_type_label",
-          "label": "Label",
-          "default": "Shop by product type"
-        },
-        {
-          "type": "url",
-          "id": "menu_product_type_url",
-          "label": "Link"
-        },
-        {
-          "type": "select",
-          "id": "menu_product_brand_image_ratio",
-          "label": "Image ratio",
-          "options": [
-            {
-              "value": "square",
-              "label": "Square"
-            },
-            {
-              "value": "circle",
-              "label": "Circle"
-            }
-          ]
-        }
-      ]
-    },
-    {
-      "type": "menu-product-type-item",
-      "name": "Menu product type item",
-      "limit": 15,
-      "settings": [
-        {
-          "type": "text",
-          "id": "menu_product_type_item",
-          "label": "Name"
-        },
-        {
-          "type": "image_picker",
-          "id": "menu_product_brand__item_image",
-          "label": "Image"
-        },
-        {
-          "type": "url",
-          "id": "menu_product_brand_item_url",
-          "label": "Custom link"
-        }
-      ]
-    },
-    {
-      "type": "menu-product-brand-item",
-      "name": "Menu product brand item",
-      "limit": 15,
-      "settings": [
-        {
-          "type": "text",
-          "id": "menu_product_brand_item",
-          "label": "Brand name"
-        },
-        {
-          "type": "image_picker",
-          "id": "menu_product_brand__item_image",
-          "label": "Brand Image"
-        },
-        {
-          "type": "url",
-          "id": "menu_product_brand_item_url",
-          "label": "Custom link"
-        }
-      ]
-    },
+
     {
       "type": "@app"
     }
