--- a/sections/home-page-banner.liquid
+++ b/sections/home-page-banner.liquid
@@ -140,7 +140,7 @@
     {% for block in section.blocks %}
       {% assign visibility = block.settings.visibility %}
       <li class="banner-slide slider__slide">
-        <div class="homepage-banner" style="background: url({{ block.settings.main_image | img_url: 'master' }}) no-repeat center/cover;">
+        <div class="homepage-banner" style="height:100vh;background: url({{ block.settings.main_image | img_url: 'master' }}) no-repeat center/cover;">
          <div class="page-width">
          <div class="homepage-banner-wrapper">
            <div class="banner-content">
