--- a/snippets/cstm-product-media-gallery.liquid
+++ b/snippets/cstm-product-media-gallery.liquid
@@ -107,7 +107,7 @@
                 assign lazy_load = true
               endif
             -%}
-            {% render 'product-thumbnail',
+            {% render 'cstm-product-thumbnail',
               media: media,
               media_count: media_count,
               position: media_position,
