product media modal

--- a/snippets/product-media-modal.liquid
+++ b/snippets/product-media-modal.liquid
@@ -48,7 +48,7 @@
           endif
 
           unless media.id == product.selected_or_first_available_variant.featured_media.id
-            render 'product-media', media: media, loop: section.settings.enable_video_looping, variant_image: variant_image
+            render 'cstm-product-media', media: media, loop: section.settings.enable_video_looping, variant_image: variant_image
           endunless
         -%}
       {%- endfor -%}
